Alignment fix

--- a/src/app/features/bills/bills.component.scss
+++ b/src/app/features/bills/bills.component.scss
@@ -101,6 +101,10 @@
                 padding-right: 30px;
                 display: flex;
                 justify-content: space-evenly;
+
+                .bill-info {
+                    width: 180px;
+                }
             }
 
             .bill-panel-content {
@@ -120,6 +124,7 @@
                         display: flex;
                         justify-content: center;
                         align-items: center;
+                        width: 200px;
                     }
                 }
             }
